--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <input class="color2" type="color" name="color2" value="#ff0000" />
     <h2>Current Background</h2>
     <h3></h3>
-    <script src="/app.js"></script>
+    <script src="../app.js"></script>
   </body>
 </html>
